--- a/src/containers/realisation/realisation.css
+++ b/src/containers/realisation/realisation.css
@@ -34,6 +34,14 @@
     padding: 50px;
 }
 
+@media screen and(max-width:800px){
+    .realisation-row{
+        display: grid;
+        grid-template-columns: auto;
+        padding: 50px;
+    }
+}
+
   .realisation-card {
   width:350px;
     margin: 20px;
