--- a/src/containers/realisation/realisation.css
+++ b/src/containers/realisation/realisation.css
@@ -36,8 +36,10 @@
 
 @media screen and(max-width:800px){
     .realisation-row{
-        display: grid;
-        grid-template-columns: auto;
+        display: flex;
+        flex-direction:column;
+        justify-content: space-evenly;
+        align-items: center;
         padding: 50px;
     }
 }
