--- a/src/containers/home/style.css
+++ b/src/containers/home/style.css
@@ -437,7 +437,7 @@ border-radius: 100px 0 100px;
   .all-activity{
   background-image: url("../../assets/images/image3.jpg");
   width:100%;
-  height: 500px;
+  /* height: 500px; */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -448,21 +448,22 @@ border-radius: 100px 0 100px;
 
   .all-activity-section h2{
   text-align: center;
-  position: absolute;
+  /* position: absolute; */
   color: #FF8150;
-  left:40rem;
-  top:5rem;
+  /* left:40rem;
+  top:5rem; */
   }
 
   @media screen and (max-width:800px) {
 
     .all-activity-section h2{
-      left: auto;
+      /* right: 10rem;
+      top: 7rem; */
     }
     .all-box-activity{
       flex-direction: column;
-      left: auto !important;
-      top:1rem;
+      /* left: auto !important;
+     position: static; */
     }
   }
   
@@ -472,7 +473,7 @@ border-radius: 100px 0 100px;
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
-    position: absolute;
+    /* position: absolute; */
     left:15rem;
     top:10rem;
   background-color: rgb(0,0,0); /* Fallback color */
