--- a/src/containers/realisation/realisation.css
+++ b/src/containers/realisation/realisation.css
@@ -28,19 +28,19 @@
 }
 
 .realisation-row{
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto;
-    padding: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 10px;
 }
 
 @media screen and(max-width:800px){
-    .realisation-row{
+    .bg-head-2 .realisation-row{
         display: flex;
         flex-direction:column;
         justify-content: space-evenly;
         align-items: center;
-        padding: 50px;
+        padding: 10px;
     }
 }
 
