--- a/src/containers/home/style.css
+++ b/src/containers/home/style.css
@@ -8,6 +8,10 @@
 
 }
 
+.bg-head a{
+  text-decoration:none;
+}
+
 .banner .right img{
   border-radius: 100px 0 100px 0;
 }
@@ -42,11 +46,17 @@
   }
  
   .banner .btn-box button:first-child{
-    background-color: #4A61FF;
+    /* background-color: #4A61FF; */
+    /* background-color: #43ff63bf; */
+    background-color: var(--main-color);
     color: white;
     margin-right: 2rem;
   }
- 
+ .banner #btn-green a{
+    color: white;
+  }
+
+
   .banner .btn-box button:nth-child(2){
     color: #4A61FF;
     border-color: #EFF1F4;
@@ -148,10 +158,15 @@ border-radius: 100px 0 100px;
 }
   
 .blue-section{
-    background-color: #122A66;
+    /* background-color: #122A66; */
+    background-color: var(--light-color);
     height: 700px;
     display: flex;
     position: relative;
+  }
+
+  .blue-section .blue-section-h2{
+    color: var(--blue-color);
   }
   
   .blue-section .box-row{
@@ -449,7 +464,8 @@ border-radius: 100px 0 100px;
   .all-activity-section h2{
   text-align: center;
   /* position: absolute; */
-  color: #FF8150;
+  /* color: #FF8150; */
+  color: var(--light-color);
   /* left:40rem;
   top:5rem; */
   }
@@ -480,7 +496,8 @@ border-radius: 100px 0 100px;
   background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
   }
   .all-box-activity div h3{
-    color:#FF8150;
+    /* color:#FF8150; */
+    color: var(--light-color);
   }
   .all-box-activity div p{
     color: white;
@@ -507,6 +524,10 @@ border-radius: 100px 0 100px;
     text-align: center;
   }
   
-  .bg-head h2,h3{
+  .bg-head .h2-head,.bg-head .h3-head{
     color: black ;
+  }
+
+  .bg-head .span-head{
+    color:#122A66;
   }
