--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+:root {
+  --main-color: rgb(42, 165, 58);
+  --green-color1: #96c452;
+  --blue-color: #1274a2;
+  --lightblue-color:rgb(116,162,100%);
+  --lightgreen-color:rgb(116,162,100%);
+  --secondary-color: #43ff63bf;
+  --light-color:#6aff6a;
+
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,6 +17,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+body span {
+ color: var(--main-color) !important;
+}
+
 
 @media screen and (max-width:500) {
   body{
