--- a/src/containers/home/style.css
+++ b/src/containers/home/style.css
@@ -412,7 +412,7 @@ border-radius: 100px 0 100px;
   margin: 0;
 }
   
-  .contact-section input{
+  .contact-section input,.contact-section textarea{
     width: fit-content;
     border-style: solid;
     border-width: 1px 1px 1px 1px;
