--- a/src/containers/realisation/realisation.css
+++ b/src/containers/realisation/realisation.css
@@ -20,6 +20,26 @@
   
   }
   
+  .realisation-row .gallery{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* height:500px; */
+    /* padding:10px; */
+  }
+
+.realisation-row .gallery div{
+  width: 350px;
+  /* height:350px; */
+  margin:10px;
+  padding:10px;
+  box-shadow: 0px 3px 10px rgba(0 0 0 / 0.2);
+}
+
+  .realisation-row .gallery img{
+    width: 100%;
+    padding:5px;
+  }
 
 
 
@@ -29,13 +49,14 @@
 
 .realisation-row{
   display: flex;
+  flex-direction:column;
   justify-content: space-evenly;
   align-items: center;
   padding: 10px;
 }
 
 @media screen and(max-width:800px){
-    .bg-head-2 .realisation-row{
+    .bg-head-2 .realisation-row .gallery{
         display: flex;
         flex-direction:column;
         justify-content: space-evenly;
@@ -50,8 +71,8 @@
     border-radius: 5px;
   }
 
-  .realisation-card:hover{
-    transform: scale(1.2);
+  .realisation-row .gallery img:hover{
+    transform: scale(1.1);
   }
 
   .realisation-card img{
@@ -62,37 +83,4 @@
 
 
 
-  .row {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 4px;
-  }
-  
-  /* Create four equal columns that sits next to each other */
-  .column {
-    flex: 25%;
-    max-width: 25%;
-    padding: 0 4px;
-  }
-  
-  .column img {
-    margin-top: 8px;
-    vertical-align: middle;
-    width: 100%;
-  }
-  
-  /* Responsive layout - makes a two column-layout instead of four columns */
-  @media screen and (max-width: 800px) {
-    .column {
-      flex: 50%;
-      max-width: 50%;
-    }
-  }
-  
-  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
-    .column {
-      flex: 100%;
-      max-width: 100%;
-    }
-  }
+ 
