--- a/src/containers/home/style.css
+++ b/src/containers/home/style.css
@@ -78,6 +78,10 @@
    }
   
   
+   .white-section{
+    margin: 50px 0;
+    padding:20px;
+   }
   
    .white-section .white-container{
     margin:2rem 4rem;
@@ -489,9 +493,9 @@ border-radius: 100px 0 100px;
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
-    /* position: absolute; */
-    left:15rem;
-    top:10rem;
+    /* left:15rem;
+    top:10rem; */
+    padding:10px;
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
   }
