--- a/src/containers/home/style.css
+++ b/src/containers/home/style.css
@@ -493,9 +493,6 @@ border-radius: 100px 0 100px;
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
-    /* left:15rem;
-    top:10rem; */
-    padding:10px;
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
   }
@@ -534,4 +531,8 @@ border-radius: 100px 0 100px;
 
   .bg-head .span-head{
     color:#122A66;
+  }
+
+  section .white-btn-color {
+    color:white !important;
   }
