--- a/src/containers/home/style.css
+++ b/src/containers/home/style.css
@@ -533,6 +533,6 @@ border-radius: 100px 0 100px;
     color:#122A66;
   }
 
-  section .white-btn-color {
+  section #white-btn-color {
     color:white !important;
   }
