--- a/src/containers/home/style.css
+++ b/src/containers/home/style.css
@@ -509,7 +509,7 @@ border-radius: 100px 0 100px;
     border-radius:10px;
     padding:20px;
     text-align:center;
-    height: 200px;
+    /* height: 200px; */
     background: rgba(0, 0, 0, 0.24);
     margin:20px;
   }
